<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.nca_final.ui.MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="Search"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_create"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/action_settings"
        app:showAsAction="always" />
</menu>