...
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="8dp">

    <LinearLayout
        android:id="@+id/duckLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="150dp"
...
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Duck #0001"
                android:textColor="#000000"
                android:textSize="20sp" />

...
